@@ -1,3 +1,8 @@
+ags (0.6.53)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed distortion because of false recycling context allocation
+
 ags (0.6.52)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
